kubernetes/cmsmon/traefik.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    k8s-app: ingress-traefik-backend
  name: ingress-traefik
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: ingress-traefik-backend
      name: ingress-traefik-backend
  template:
    metadata:
      labels:
        k8s-app: ingress-traefik-backend
        name: ingress-traefik-backend
    spec:
      containers:
      - args:
        - --api
        - --kubernetes
        - --logLevel=DEBUG
        - --entrypoints=Name:http Address::80
        image: traefik
        imagePullPolicy: Always
        name: ingress-traefik-backend
        ports:
        - containerPort: 80
          hostPort: 80
          name: http
          protocol: TCP
        resources: {}
      hostNetwork: true
      nodeSelector:
        role: ingress
      restartPolicy: Always
      serviceAccountName: ingress-traefik
