kubernetes/cmsmon/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cmsmon-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.entryPoints: "http"
spec:
  rules:
  - host: cmsmon.web.cern.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: cmsmon
          servicePort: 8181
